[project]
name = "http-sse-mcp-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "html2text>=2025.4.15",
    "mcp[cli]>=1.9.1",
    "ollama>=0.4.8",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
]
